[package]
name = "plutovg-sys"
version = "0.0.1"
edition = "2024"
authors = ["Nick Robinson <nick@nrobinson.org>"]
description = "Low-level bindings to the PlutoVG vector graphics library"
license = "MIT"
repository = "https://githbub.com/nickrobinson/plutovg-sys"
categories = ["external-ffi-bindings", "graphics"]
keywords = ["graphics", "vector", "svg", "rendering", "ffi"]
documentation = "https://docs.rs/plutovg-sys"
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.72.0"
cc = "1.0"
